# LEDFACE_ros2

./: .gitignore  .gitmodules  README.md  build.sh
.cache/clangd/index/: dot_filter.cpp.5B300CF82DE9ADC9.idx  dot_filter.hpp.0AADD985F9F726D7.idx  image_dot_filter.cpp.20D669B078409BFA.idx  image_pub.cpp.6B3EB92458C003D0.idx  image_pub.hpp.F09A2DA03C617282.idx
esp32_firmware_ws/firmware/: APP
esp32_firmware_ws/firmware/dev_ws/install/: local_setup.sh  setup.sh
esp32_firmware_ws/firmware/dev_ws/log/: latest_build
esp32_firmware_ws/firmware/mcu_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
esp32_firmware_ws/firmware/mcu_ws/install/include/rmw_microxrcedds_c/: config.h
esp32_firmware_ws/firmware/mcu_ws/install/share/action_msgs/: package.sh
esp32_firmware_ws/firmware/mcu_ws/install/share/actionlib_msgs/: local_setup.sh  package.sh
esp32_firmware_ws/firmware/mcu_ws/install/share/builtin_interfaces/: local_setup.sh  package.sh
esp32_firmware_ws/firmware/mcu_ws/install/share/common_interfaces/: package.sh
esp32_firmware_ws/firmware/mcu_ws/install/share/composition_interfaces/: local_setup.sh  package.sh
esp32_firmware_ws/firmware/mcu_ws/install/share/diagnostic_msgs/: package.sh
esp32_firmware_ws/firmware/mcu_ws/install/share/example_interfaces/: package.sh
esp32_firmware_ws/firmware/mcu_ws/install/share/geometry_msgs/: package.sh
esp32_firmware_ws/firmware/mcu_ws/install/share/libyaml_vendor/: local_setup.sh  package.sh
esp32_firmware_ws/firmware/mcu_ws/install/share/lifecycle_msgs/: local_setup.sh  package.sh
esp32_firmware_ws/firmware/mcu_ws/log/: latest_build  latest_list
esp32_firmware_ws/install/: local_setup.sh  setup.sh
esp32_firmware_ws/install/micro_ros_setup/share/micro_ros_setup/: package.sh
esp32_firmware_ws/log/: latest_build
ros2_ws/: build.sh
ros2_ws/src/: micro_ros_agent
ros2_ws/src/image_dot_filter/: CMakeLists.txt
ros2_ws/src/image_dot_filter/include/image_dot_filter/: dot_filter.hpp
ros2_ws/src/image_dot_filter/src/: image_dot_filter.cpp
ros2_ws/src/image_publisher/: CMakeLists.txt
ros2_ws/src/image_publisher/launch/: image_pub_launch.py
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/ledface_launch/: setup.cfg
ros2_ws/src/log/: latest_build
src/image_dot_filter/: package.xml
src/image_dot_filter/src/: dot_filter.cpp
src/image_publisher/: package.xml
src/image_publisher/config/: image_pub_params.yaml
src/image_publisher/include/image_publisher/: image_pub.hpp
src/image_publisher/src/: image_pub.cpp
src/ledface_launch/: package.xml  setup.py
src/ledface_launch/launch/: ledface_launch.py
(+221 files in other folders)
